[package]
name = "countdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bitvec = "1.0.1"
bytemuck = { version="1.13.0", features=["derive"] }
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
